tests/baselines/reference/multipleExportAssignments.errors.txt
==== tests/cases/compiler/multipleExportAssignments.ts (2 errors) ====
    interface connectModule {
        (res, req, next): void;
    }
    interface connectExport {
        use: (mod: connectModule) => connectExport;
        listen: (port: number) => void;
    }
    var server: {
        (): connectExport;
        test1: connectModule;
        test2(): connectModule;
    };
    export = server;
    ~~~~~~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    export = connectExport;
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
     
    